syntax = "proto3";
package shentu.bounty.v1;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "cosmos_proto/cosmos.proto";
import "google/protobuf/any.proto";

import "cosmos/base/v1beta1/coin.proto";
import "shentu/bounty/v1/bounty.proto";

option go_package = "github.com/shentufoundation/shentu/x/bounty/types";

// Msg defines the staking Msg service.
service Msg {
  // CreateProgram defines a method for creating a new program.
  rpc CreateProgram(MsgCreateProgram) returns (MsgCreateProgramResponse);

  // EditProgram defines a method for modifying a program.
  rpc EditProgram(MsgEditProgram) returns (MsgEditProgramResponse);

  // Open a program status by program_id
  rpc OpenProgram(MsgOpenProgram) returns (MsgOpenProgramResponse);

  // Closed a program status by program_id
  rpc CloseProgram(MsgCloseProgram) returns (MsgCloseProgramResponse);

  // SubmitFinding defines a method for submitting a new finding.
  rpc SubmitFinding(MsgSubmitFinding) returns (MsgSubmitFindingResponse);

  // EditFinding defines a method for editing a new finding.
  rpc EditFinding(MsgEditFinding) returns (MsgEditFindingResponse);

  // AcceptFinding defines a method for host accept a finding.
  rpc AcceptFinding(MsgAcceptFinding) returns (MsgAcceptFindingResponse);

  // RejectFinding defines a method for host reject a finding.
  rpc RejectFinding(MsgRejectFinding) returns (MsgRejectFindingResponse);

  // CloseFinding defines a method for submitter or certifier close a finding
  rpc CloseFinding(MsgCloseFinding) returns (MsgCloseFindingResponse);

  // MsgReleaseFinding defines a method for release a finding.
  rpc ReleaseFinding(MsgReleaseFinding) returns (MsgReleaseFindingResponse);
}

// MsgCreateProgram defines a SDK message for creating a new program.
message MsgCreateProgram {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  string name = 1;
  string description = 2;
  string operator_address = 3 [(gogoproto.moretags) = "yaml:\"operator_address\""];
  repeated string member_accounts = 4 [(gogoproto.moretags) = "yaml:\"member_accounts\""];
  string program_id = 5 [(gogoproto.moretags) = "yaml:\"program_id\""];
  repeated BountyLevel bounty_levels = 6 [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"bounty_levels\""];
}

// MsgEditProgram defines a SDK message for editing a program.
message MsgEditProgram {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  string name = 1;
  string description = 2;
  string operator_address = 3 [(gogoproto.moretags) = "yaml:\"operator_address\""];
  repeated string member_accounts = 4 [(gogoproto.moretags) = "yaml:\"member_accounts\""];
  string program_id = 5 [(gogoproto.moretags) = "yaml:\"program_id\""];
  repeated BountyLevel bounty_levels = 6 [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"bounty_levels\""];
}

// MsgCreateProgramResponse defines the Msg/CreateProgram response type.
message MsgCreateProgramResponse {
}

// MsgModifyProgramResponse defines the Msg/ModifyProgram response type.
message MsgEditProgramResponse {}

message MsgOpenProgram {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  string program_id = 1 [(gogoproto.moretags) = "yaml:\"program_id\""];
  string operator_address = 2 [(gogoproto.moretags) = "yaml:\"operator_address\""];
}

message MsgOpenProgramResponse {}

message MsgCloseProgram {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  string program_id = 1 [(gogoproto.moretags) = "yaml:\"program_id\""];
  string operator_address = 2 [(gogoproto.moretags) = "yaml:\"operator_address\""];
}

message MsgCloseProgramResponse {}

// MsgSubmitFinding defines a message to submit a finding.
message MsgSubmitFinding {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  string program_id = 1 [(gogoproto.moretags) = "yaml:\"program_id\""];
  string finding_id = 2 [(gogoproto.moretags) = "yaml:\"finding_id\""];
  string title = 3;
  string description = 4;
  string finding_hash = 5 [(gogoproto.moretags) = "yaml:\"finding_hash\""];
  string submitter_address = 6 [(gogoproto.moretags) = "yaml:\"submitter_address\""];
  SeverityLevel severity_level = 7 [(gogoproto.moretags) = "yaml:\"severity_level\""];
}

// MsgSubmitFindingResponse defines the MsgSubmitFinding response type.
message MsgSubmitFindingResponse {}

// MsgEditFinding defines a message to edit a finding.
message MsgEditFinding {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  string program_id = 1 [(gogoproto.moretags) = "yaml:\"program_id\""];
  string finding_id = 2 [(gogoproto.moretags) = "yaml:\"finding_id\""];
  string title = 3;
  string description = 4;
  string submitter_address = 5 [(gogoproto.moretags) = "yaml:\"submitter_address\""];
  SeverityLevel severity_level = 6 [(gogoproto.moretags) = "yaml:\"severity_level\""];
}

// MsgEditFindingResponse defines the MsgEditFinding response type.
message MsgEditFindingResponse {}

// MsgAcceptFinding defines a message to accept a finding to an existing finding.
message MsgAcceptFinding {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  string finding_id = 1 [(gogoproto.moretags) = "yaml:\"finding_id\""];
  string operator_address = 2 [(gogoproto.moretags) = "yaml:\"operator_address\""];
  FindingStatus status = 3 [(gogoproto.moretags) = "yaml:\"status\""];
}

// MsgAcceptFindingResponse defines the Msg/AcceptFinding response type.
message MsgAcceptFindingResponse {}

// MsgRejectFinding defines a message to reject a finding to an existing finding.
message MsgRejectFinding {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  string finding_id = 1 [(gogoproto.moretags) = "yaml:\"finding_id\""];
  string operator_address = 2 [(gogoproto.moretags) = "yaml:\"operator_address\""];
}

// MsgRejectFindingResponse defines the Msg/RejectFinding response type.
message MsgRejectFindingResponse {}

// MsgCloseFinding defines a message to close a finding to an existing finding.
message MsgCloseFinding {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  string finding_id = 1 [(gogoproto.moretags) = "yaml:\"finding_id\""];
  string operator_address = 2 [(gogoproto.moretags) = "yaml:\"operator_address\""];
}

// MsgCloseFindingResponse defines the Msg/CloseFinding response type.
message MsgCloseFindingResponse {}

// MsgReleaseFinding defines a message to release a finding.
message MsgReleaseFinding {
  option (gogoproto.equal) = false;

  string finding_id = 1 [(gogoproto.moretags) = "yaml:\"finding_id\""];
  string description = 2;
  string operator_address = 3 [(gogoproto.moretags) = "yaml:\"operator_address\""];
}

// MsgReleaseFindingResponse defines the MsgReleaseFinding response type.
message MsgReleaseFindingResponse {}